switch to application/vnd.api+json and fix bug
