# server/api/controllers/node-controller.js
@@ -6,7 +6,8 @@ const { serializer, deserializer } = nodeRepo;
 module.exports = {
   getNodes: co(function* get(req, res) {
     const people = yield nodeRepo.findAll();
-    res.json(serializer.serialize(people));
+    res
+      .type('application/vnd.api+json').json(serializer.serialize(people));
   }),
 
   getNode: co(function* get(req, res) {
@@ -16,7 +17,9 @@ module.exports = {
     const node = yield nodeRepo.findById(id);
 
     if (node) {
-      res.json(serializer.serialize(node));
+      res
+        .type('application/vnd.api+json')
+        .send(JSON.stringify(serializer.serialize(node)));
     } else {
       res.status(404).end('node does not exist');
     }
@@ -30,6 +33,9 @@ module.exports = {
       title: node.title,
     });
 
-    res.status(201).json(serializer.serialize(record));
+    res
+      .status(201)
+      .type('application/vnd.api+json')
+      .send(JSON.stringify(serializer.serialize(record)));
   }),
 };
